[metadata]
name = torch-log-wmse
version = 0.3.0
author = Christopher Landschoot
author_email = crlandschoot@gmail.com
license = Apache License 2.0
description = logWMSE is an audio quality metric & loss function with support for digital silence target. Useful for training and evaluating audio source separation systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crlandsc/torch-log-wmse
project_urls =
    Bug Tracker = https://github.com/crlandsc/torch-log-wmse/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
include_package_data = True
packages =
    torch_log_wmse
    torch_log_wmse_audio_quality
python_requires = >=3.8
install_requires =
    torch>=1.8.0
    torchaudio>=1.8.0
    numpy>=1.23.5

[options.package_data]
torch_log_wmse = filter_ir.pkl